--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -20,7 +20,7 @@
   justify-content: space-between;
   height: 72px;
   padding: 0 -100px; /* increased gap inside navbar */
-  background-color: #817676 !important;/* optional */
+  background-color: lightgray !important;/* optional */
 }
 
 /* Logo */
