--- a/src/components/founderMsg/FounderMsg.css
+++ b/src/components/founderMsg/FounderMsg.css
@@ -58,6 +58,7 @@
     text-transform: uppercase;
     letter-spacing: 0.05em;
     margin-bottom: 0.5rem;
+    text-align: center;
 }
 
 .header-subtitle {
@@ -66,6 +67,7 @@
     /* text-teal-200 */
     font-size: 1.125rem;
     font-weight: 500;
+    text-align: center !important;
 }
 
 /* Founder Profile Area */
@@ -128,18 +130,7 @@
  * Message Content & Signature
  * ---------------------------------- */
 
-.message-content {
 
-    /* @apply p-8 md:p-12 text-left; */
-    padding: 2rem;
-    text-align: left;
-}
-
-@media (min-width: 768px) {
-    .message-content {
-        padding: 3rem;
-    }
-}
 
 /* Blockquote/Italic Style */
 .message-quote {
@@ -184,6 +175,10 @@
     
 }
 
+.message-content{
+    padding: 0 2rem 0;
+}
+
 
 
 /* Responsive Adjustments */
@@ -203,6 +198,9 @@
         max-width: 100%;
         border-width: 3px;
         border-radius: 12px;
+    }
+    .header-title, .header-subtitle{
+        text-align:center;
     }
 }
 
