--- a/src/components/entrepreneur/Entrepreneur.css
+++ b/src/components/entrepreneur/Entrepreneur.css
@@ -115,6 +115,10 @@
   text-align: left;
 }
 
+.dot{
+  color: #FFD70F;
+  margin-right: 10px;
+}
 /* ======================== */
 /* VIEW MORE BUTTON         */
 /* ======================== */
@@ -138,6 +142,10 @@
 
 .view-more:hover {
   transform: translateY(-2px);
+}
+
+.blog button{
+  border-bottom: none;
 }
 
 /* ======================== */
