--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -129,6 +129,14 @@
   font-size: 14px;
 }
 
+.btn-center-1 a{
+  text-decoration: none;
+}
+
+.btn-center-1{
+  margin: 0 auto;
+}
+
 /* ========================================================= */
 /* RESPONSIVE (Compact version)                              */
 /* ========================================================= */
@@ -152,8 +160,8 @@
 
 @media (max-width: 520px) {
   .wealth-heading span {
-    font-size: 22px;
-    line-height: 2.8rem;
+    font-size: 24px;
+    line-height: 2.4rem;
   }
 
   .wealthy-text-col {
@@ -172,45 +180,6 @@
   }
 }
 
-/* Main button */
-.blog {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
-.view-more {
-  display: flex;
-  justify-content: center;
-}
-
-.view-more-link,
-.view-more-link-my-life {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Button style */
-.view-more-btn {
-  background-color: #0a9396;
-  color: #fff;
-  padding: 12px 30px;
-  font-size: 16px;
-  border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  text-align: center;
-}
-
-/* Hover effect */
-.view-more-btn:hover {
-  background-color: #087d9e;
-  transform: scale(1.05);
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
-}
 
 
 
@@ -236,10 +205,6 @@
   .wealthy-image-col img {
     max-width: 420px;
   }
-
-  .wealth-heading span {
-    font-size: 26px;
-  }
 }
 
 /* ----------- Medium devices (tablets, portrait) ----------- */
@@ -256,10 +221,11 @@
   }
 
   .wealth-heading span {
-    font-size: 22px;
-    line-height: 2.8rem;
-    margin: 0 auto;
-    display: inline-block;
+   padding: 0 15px;
+   font-size: 24px;
+   line-height: 1.6;
+   margin-left: -30px;
+   margin-top: 5px;
   }
 
   .wealthy-row {
@@ -278,9 +244,6 @@
     max-width: 320px;
   }
 
-  .view-more-btn {
-    width: 90%;
-  }
 }
 
 /* ----------- Small phones ----------- */
@@ -290,10 +253,11 @@
   }
 
   .wealth-heading span {
-    font-size: 20px;
-    padding: 0 10px;
-    line-height: 2.4rem;
-    margin: 0 0 0 20px;
+   padding: 0 15px;
+   font-size: 24px;
+   line-height: 1.6;
+   margin-left: -20px;
+   margin-top: 5px;
   }
 
   .wealthy-text-col {
@@ -315,12 +279,6 @@
     font-size: 12px;
     margin-top: 10px;
   }
-
-  .view-more-btn {
-    width: 180px;
-    font-size: 14px;
-    padding: 10px 20px;
-  }
 }
 
 /* ----------- Ultra small devices ----------- */
@@ -331,12 +289,10 @@
   }
 
   .wealth-heading span {
-    font-size: 24px;
-    padding: 0 8px;
-    margin: 0 0 0 20px;
-  }
-
-  .view-more-btn {
-    width: 150px;
+   padding: 0 15px;
+   font-size: 24px;
+   line-height: 1.6;
+   margin-left: -20px;
+   margin-top: 5px;
   }
 }
